vercel frontend  error fixed

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,16 +2,26 @@
     "version": 2,
     "name": "frontend",
     "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static",
-            "config": {"distDir": "dist"}
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
         }
+      }
     ],
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/"
-        }
+    "routes": [
+      {
+        "src": "/assets/(.*)",
+        "dest": "/assets/$1"
+      },
+      {
+        "src": "/favicon.ico",
+        "dest": "/favicon.ico"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
-}
+  }
