--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "backend",
+    "name": "glafo-backend",
     "builds": [
         {
             "src": "server.js",
@@ -10,8 +10,16 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/server.js"
-            
+            "dest": "/server.js",
+            "headers": {
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+                "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization"
+            }
         }
-    ]
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
 }
