--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,28 +1,11 @@
 {
     "version": 2,
-    "name": "glafo-frontend",
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/assets/(.*)",
-        "dest": "/assets/$1"
-      },
-      {
-        "src": "/favicon.ico",
-        "dest": "/favicon.ico"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "rewrites": [
+      { "source": "/assets/(.*)", "destination": "/assets/$1" },
+      { "source": "/favicon.ico", "destination": "/favicon.ico" },
+      { "source": "/(.*)", "destination": "/index.html" }
     ],
     "env": {
       "VITE_BACKEND_URL": "https://glafo-backend.vercel.app",
